@@ -1,6 +1,5 @@
 package ru.job4j.tracker;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -11,7 +10,7 @@ public class StartUI {
         this.output = output;
     }
 
-    public void init(Input input, Tracker tracker, List<UserAction> actions)  {
+    public void init(Input input, Store store, List<UserAction> actions)  {
         boolean run = true;
         while (run) {
             this.showMenu(actions);
@@ -21,7 +20,7 @@ public class StartUI {
                 continue;
             }
             UserAction action = actions.get(select);
-            run = action.execute(input, tracker);
+            run = action.execute(input, store);
         }
     }
 
@@ -34,10 +33,25 @@ public class StartUI {
 
     public static void main(String[] args) {
         Output output = new ConsoleOutput();
-        Input input = new ValidateInput(output, new ConsoleInput());
-        Tracker tracker = new Tracker();
-        List<UserAction> actions = Arrays.asList(new CreateAction(output), new ShowItems(output), new EditAction(output), new DeleteItem(output),
-                new FindItemById(output), new FindItemByName(output), new CloseAction(output));
-        new StartUI(output).init(input, tracker, actions);
+        Input input = new ValidateInput(
+                output,
+                new ConsoleInput()
+        );
+
+        try (SqlTracker tracker = new SqlTracker()) {
+            tracker.init();
+            List<UserAction> actions = List.of(
+                    new CreateAction(output),
+                    new EditAction(output),
+                    new DeleteItem(output),
+                    new ShowItems(output),
+                    new FindItemById(output),
+                    new FindItemByName(output),
+                    new CloseAction(output)
+            );
+            new StartUI(output).init(input, tracker, actions);
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
     }
 }
